@@ -20,7 +20,7 @@ public class Min<T> {
 
   private double _minValue = Double.POSITIVE_INFINITY;
 
-  private List<T> _minElements = new ArrayList<T>();
+  private List<T> _minElements = new ArrayList<>();
 
   public void add(double value, T element) {
     if (value == _minValue) {
@@ -42,7 +42,7 @@ public class Min<T> {
 
   public T getMinElement() {
     if (_minElements.isEmpty()) return null;
-    return _minElements.get(0);
+    return _minElements.getFirst();
   }
 
   public List<T> getMinElements() {
